# Maman15

./: .gitignore  ProcessingData.md  Q1-README.docx  Q2.docx  README.md  client_handler.py  main.py  protocol.py  results.xlsx  server.py
client/: .gitignore  CMakeLists.txt  CRC.cpp  CRC.h  Client.cpp  Client.h  EncryptedFileSender.cpp  EncryptedFileSender.h  Maman15.Client.sln  Maman15.Client.vcxproj  Maman15.Client.vcxproj.filters  MeInfo.cpp  MeInfo.h  RSADecryptor.cpp  RSADecryptor.h  RSAManager.cpp  RSAManager.h  main.cpp  me.info  protocol.h  transfer.info  util.cpp  util.h
client/cryptopp_wrapper/: CMakeLists.txt
client/util/: CRC.cpp  CRC.h  SocketHelper.h  formats.cpp  formats.h
server/: client_session.py  db.py  protocol.py  server.py  session.py  utils.py
server/Another Test/: transfer.info
server/Aviram Gitul/: transfer.info
server/Aviv Naaman/: transfer.info
server/HulloWorld123/: formats.cpp
server/Literaly Wants to sleep right now/: me.info
server/Literaly Wants to sleep right now1/: formats.cpp  me.info
